# Aegoria

./: .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/console/: middleware.ts  next.config.mjs  package.json  tailwind.config.ts
apps/console/app/: globals.css  layout.tsx
apps/console/app/(app)/: layout.tsx  page.tsx
apps/console/app/login/: login-form.tsx  page.tsx
apps/console/components/app-shell/: nav.ts  shell.tsx  sidebar.tsx  topbar.tsx  user-menu.tsx
apps/console/components/carbon/: intensity.ts  placement-explainer.tsx  region-table.tsx  savings-compare.tsx
apps/console/components/catalog/: catalog-browser.tsx  fair.tsx  schema-table.tsx  tokens.ts
apps/console/components/governance/: proposal-card.tsx
apps/console/components/graph/: graph-explorer.tsx  theme.ts
apps/console/components/lineage/: layout.ts  lineage-explorer.tsx  theme.ts
apps/console/components/onboard/: onboard-studio.tsx
apps/console/components/packs/: pack-card.tsx
apps/console/components/pipelines/: pipeline-row.tsx  (+1 more)
apps/console/lib/: control-plane.ts  data.ts  onboard.ts  types.ts
brand/: tokens.json
control-plane/: README.md  pyproject.toml
control-plane/control_plane/: __init__.py  app.py  auth.py  cli.py  mappers.py  seed.py
deploy/: .dockerignore  Dockerfile.api  Dockerfile.console  README.md  api-entrypoint.sh  docker-compose.yml
deploy/k8s/: README.md  api.yaml  console.yaml  hpa.yaml  ingress.yaml  namespace.yaml
docs/: GLOSSARY.md  README.md
docs/architecture/: README.md  overview.md  tech-stack.md
docs/architecture/decisions/: 0001-core-engine-never-changes.md  0002-iceberg-lakehouse-and-open-formats.md  0003-privacy-and-sovereignty-by-default.md  0004-provider-agnostic-adapters-and-plugins.md  README.md  adr-template.md
docs/brand/: README.md  guidelines.md
docs/governance/: README.md  data-commons.md  security.md
docs/product/: README.md  kpis.md  overview.md  roadmap.md
docs/reference/: README.md  access-control-rbac.md  adapter-interfaces.md  domain-pack-spec.md
domain-packs/climate-emissions/: README.md  manifest.yaml  pack.py
domain-packs/climate-emissions/sample_data/: facility_emissions.parquet  gen_sample.py  ground_sensors.csv  sentinel_plumes.parquet
domain-packs/consumer-credit/: README.md  manifest.yaml  pack.py
domain-packs/consumer-credit/sample_data/: gen_sample.py  loan_applications.csv  loan_applications.parquet  repayment_history.csv  repayment_history.parquet
engine/: README.md  pyproject.toml
engine/aegoria_core/: __init__.py  _builtins.py  cli.py  config.py  engine.py  errors.py  registry.py
engine/aegoria_core/adapters_builtin/: __init__.py  carbon_static.py  catalog_sql.py  compute_duckdb.py  identity_static.py  provenance_ed25519.py  storage_localfs.py  stream_inproc.py
engine/aegoria_core/contracts/: __init__.py  adapters.py  domain_pack.py  models.py  services.py
engine/aegoria_core/dataprep/: __init__.py  ai_export.py  cleanser.py  models.py  profiler.py  studio.py
engine/aegoria_core/services/: __init__.py  catalog.py  governance.py  ingestion.py  knowledge_graph.py  lakehouse.py  ml.py  provenance.py  scheduler.py
engine/aegoria_core/sources/: __init__.py  base.py  source_file.py  source_sql.py  source_sqlite.py
engine/tests/: test_contracts.py  test_dataprep.py  test_domain_neutrality.py  test_e2e.py  test_reference_impl.py
examples/: README.md  dataprep_demo.py  e2e_demo.py
sdk/: README.md  pyproject.toml
sdk/aegoria_sdk/: __init__.py  cli.py  scaffold.py  testkit.py  validate.py
(+30 files in other folders)
