[project]
name = "aegoria-control-plane"
version = "0.1.0"
description = "Aegoria control-plane — the FastAPI REST surface that exposes the domain-neutral engine to the console. Thin, resilient, registry-driven; owns no domain logic or infra."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Aegoria" }]
dependencies = [
  "aegoria-core",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "orjson>=3.9",
  "structlog>=24.1",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.5"]

[project.scripts]
aegoria-control-plane = "control_plane.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["control_plane"]

[tool.hatch.metadata]
# aegoria-core is installed editable from ../engine; resolve it locally.
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py310"
