[project]
name = "aegoria-sdk"
version = "0.1.0"
description = "Aegoria SDK — author, validate and test domain-packs declaratively. The toolkit a new market uses to onboard onto the Aegoria lakehouse without touching the core engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Aegoria" }]
dependencies = [
  "aegoria-core>=0.1.0,<1.0.0",
  "pyyaml>=6.0",
  "pydantic>=2.6",
  "packaging>=23.0",
]

[project.optional-dependencies]
# The test harness reads sample data through pyarrow; pulled from the engine's
# `lite` extra in practice, declared here so pack CI can install it standalone.
testkit = ["pyarrow>=15.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
aegoria-pack = "aegoria_sdk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aegoria_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"
